--- a/obilostyles.css
+++ b/obilostyles.css
@@ -1,108 +1,285 @@
 :root {
-    --darkest-color: #05222F;
-    --middark-color: #1777A4;
-    --brand-blue: #2199EB;
-    --brand-purple: #7F3FEF;
-    --brand-darkbrown: #191D21;
-    --brand-midbrown: #394145;
-    --midlight-color: #363636;
-    --lightest-color: #E8F6FD;
-    --lightgray: #EAEFF1;
-    --generaltextcolor: #454544;
-}
-html {
-    box-sizing: border-box;
-}
-*, *:before, *:after {
-    box-sizing: inherit;
-}
-a {
-    color: var(--hyperlinkcolor);
-}
-body {
-    color: var(--darkest-color);
-    font-family: 'Manrope', helvetica, helvetica neue, Segoe UI, sans-serif;
-    font-weight: 100 !important;
-    background: #F8F8F6;
-    color: var(--generaltextcolor);
-    text-align: left;
-    margin: auto;
-    font-size: 21px;
-}
-.mainSiteBrand {
-    margin-top: 50px;
-    color: White;
-    display: block;
-    color: #2199EB;
-    font-weight: 700;
-    font-size: 2em;
-}
-.panelOne {
-    border: solid 3px var(--middark-color);
-    padding: 15px;
-}
-.coinTickerButton {
-    background: #363636;
-    border: solid 2px #0077FF;
-    border-radius: 5px;
-    padding: 5px;
-}
-#searchbar {
-    border: solid 4px var(--brand-blue);
-    border-radius: 5px;
-}
-#searchbutton {
-    background: var(--brand-blue);
-    border-radius: 5px;
-}
-.lighter {
-    opacity: 0.6;
-}
-searchelement {
-    height: 80px;
-    border-radius: 5px;
-    min-height: 70px;
-    padding: 13px;
-    font-size: 0.9em;
-}
-.coinPanel1 {
-    border-radius: 5px;
-    border: solid 1px rgba(255, 255, 255, 0.2);
-    padding: 15px;
-    font-size: 1.1em;
-    color: #2B5CAB;
-    display: inline;
-    max-height: 30px;
-}
-.homesection {
-    border-top: solid 4px #E3E6EC;
-    border-bottom: solid 4px #E3E6EC;
-    font-size: 1.3em;
-    font-weight: 200;
-    padding: 30px;
-    transition: 0.3s;
+   --darkest-color: #05222F;
+   --middark-color: #1777A4;
+   --brand-blue: #1475e4;
+   --brand-purple: #7F3FEF;
+   --brand-darkbrown: #191D21;
+   --brand-midbrown: #394145;
+   --midlight-color: #363636;
+   --lightest-color: #E8F6FD;
+   --lightgray: #EAEFF1;
+   --generaltextcolor: #2f2f2f;
+   --lightbordergray: #E3E6EC;
 }
 
-.homesection:hover{
-    background: rgba(255,255,255,0.3);
+html {
+   box-sizing: border-box;
 }
+
+*,
+*:before,
+*:after {
+   box-sizing: border-box;
+}
+
+a {
+   color: var(--hyperlinkcolor);
+}
+
+body {
+   color: var(--darkest-color);
+   font-family: 'Manrope', helvetica, helvetica neue, Segoe UI, sans-serif;
+   font-weight: 100 !important;
+   background: #F1F3F5;
+   color: var(--generaltextcolor);
+   text-align: left;
+   margin: auto;
+   font-size: 20px;
+}
+
+.siteheadertext {
+   margin-top: 50px;
+   color: White;
+   display: block;
+   color: var(--brand-blue);
+   font-weight: 700;
+   font-size: 1.6em;
+   display: block;
+   padding-bottom: 0px;
+   margin-bottom: 7px;
+}
+
+.panelOne {
+   border: solid 3px var(--middark-color);
+   padding: 15px;
+}
+
+.lighter {
+   opacity: 0.75;
+}
+
+.lightest {
+   opacity: 0.5;
+}
+
+.coinTickerButton {
+   background: #363636;
+   border: solid 2px var(--brand-blue);
+   border-radius: 5px;
+   padding: 5px;
+}
+
+#searchbar {
+   border: solid 4px var(--brand-blue);
+   border-radius: 5px;
+}
+
+#searchbutton {
+   background: var(--brand-blue);
+   border-radius: 5px;
+}
+
+.lighter {
+   opacity: 0.6;
+}
+
+searchelement {
+   height: 80px;
+   border-radius: 5px;
+   min-height: 70px;
+   padding: 13px;
+   font-size: 0.9em;
+}
+
+.coinPanel1 {
+   border-radius: 5px;
+   border: solid 1px rgba(255, 255, 255, 0.2);
+   padding: 15px;
+   font-size: 1.1em;
+   color: #2B5CAB;
+   display: inline;
+   max-height: 30px;
+}
+
+.homesection {
+   border-top: solid 4px #E3E6EC;
+   border-bottom: solid 4px #E3E6EC;
+   font-size: 1.3em;
+   font-weight: 200;
+   padding: 30px;
+   transition: 0.3s;
+}
+
+.homesection:hover {
+   /*   background: rgba(255, 255, 255, 0.3);*/
+}
+
+.footerbox {
+   border-top: solid 4px #E3E6EC;
+   border-bottom: solid 4px #E3E6EC;
+   font-size: 0.8em;
+   font-weight: 200;
+   padding: 30px;
+   transition: 0.2s;
+   text-align: left;
+}
+
 .outermostcontainer {
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    width: 800px;
+   margin: 0 auto;
+   display: flex;
+   flex-direction: column;
+   width: 800px;
+   border-left: dotted 2px var(--lightbordergray);
+   padding-left: 21px;
 }
+
 .footerrow {
-    text-align: left;
+   text-align: left;
 }
-.projectnamelink {
-    font-weight: 700;
-    border-bottom: solid 2px;
-    display: inline;
+
+ul {
+   list-style-type: none;
+   margin: 0;
+   padding: 0;
 }
-.projectdescription {}
-@media all and (max-width: 1690px) {}
-@media all and (max-width: 1280px) {}
-@media all and (max-width: 980px) {}
+
+nav>a {}
+
+.navbar {
+   display: flex;
+   justify-content: flex-start;
+}
+
+li>a {
+   text-decoration: none;
+   transition: 0.23s;
+   padding-right: 15px;
+}
+
+li>a:hover {
+   border-bottom: solid 3px;
+   font-weight: 500;
+   color: var(--brand-blue);
+   padding-right: 16px;
+   margin-right: 10px;
+}
+
+.lastupdatednote {
+   background-color: var(--lightbordergray);
+   color: rgb(153, 153, 153);
+   border-radius: 7px;
+   padding: 7px;
+   font-size: 0.5em;
+   margin-bottom: 7px;
+}
+
+span.technologiesused {
+   border: solid 1px #1475e470;
+   border-radius: 11px;
+   height: 22px;
+   display: inline-block;
+   font-size: 0.5em;
+   padding: 3px;
+   padding-left: 7px;
+   padding-right: 7px;
+   opacity: 0.9;
+   transition: 0.2s;
+}
+
+span.technologiesused:hover {
+   border-width: 0px 0px 1px 0px;
+   border-radius: 0px;
+}
+
+.lightbigheader {
+   font-weight: 800;
+   color: rgb(206, 206, 206);
+}
+
+
+
+a.projectname{
+   font-weight: 700;
+   border:none;
+   display: block;
+   text-decoration: none;
+   color: #1475e4;
+   margin-top: 10px !important;
+   transition: 0.2s;
+   font-size: 0.95em;
+   margin-bottom:7px;
+}
+
+a.projectnamelink {
+   font-weight: 400;
+   border-bottom: solid 2px #1475e448 !important;
+   display: block;
+   text-decoration: none;
+   color: #1475e4;
+   margin-top: 3px !important;
+   transition: 0.2s;
+   font-size: 0.65em;
+   margin-bottom:0px;
+}
+
+a.projectnamelink:hover {
+   font-weight: 700;
+   border-bottom: solid 2px #ffa310de !important;
+   margin-left: 10px;
+   background-color: #ffa31009;
+}
+
+.projectdescription {
+   font-weight: 300;
+   font-size: 0.8em;
+   padding: 0px;
+   margin: 0;
+   margin-bottom: 14px;
+}
+
+.panelbox{
+   padding:0px;
+   border-radius:0px;
+   -webkit-box-shadow: -3px 8px 21px 1px rgba(20,20,20,0.03); 
+   box-shadow: -3px 8px 21px 1px rgba(20,20,20,0.03);
+   margin-top:20px;
+}
+
+.panelboxheader{
+   background-color:#F8F9FA;
+   padding:20px;
+}           
+
+.panelboxcontent{
+   background-color:#FFFFFF;
+   padding:20px;
+}
+
+
+
+/* FIRST BREAKPOINT */
+@media all and (max-width: 480px) {
+
+   body {
+      width: 470px;
+   }
+
+   h1 {
+      font-size: 2em;
+
+   }
+}
+
+/* SECOND BREAKPOINT */
 @media all and (max-width: 736px) {}
-@media all and (max-width: 480px) {}
+
+/* THIRD BREAKPOINT */
+@media all and (max-width: 980px) {}
+
+
+/* FOURTH BREAKPOINT */
+@media all and (max-width: 1280px) {}
+
+
+/* FIFTH BREAKPOINT */
+@media all and (max-width: 1690px) {}
