--- a/obilostyles.css
+++ b/obilostyles.css
@@ -123,7 +123,7 @@ h4.introduction {
 
 .blueicon {
     color: var(--obilo-blue);
-    opacity: 0.7;
+    opacity: 0.85;
 }
 
 .blueicon:hover {
@@ -156,15 +156,17 @@ h4.introduction {
 }
 
 .footerbox {
-    /* border-top: solid 4px #E3E6EC; */
-    border-bottom: solid 13px #e3e6ec88;
+    margin-top:40px;
+     background-color:rgba(0,0,0,0.03);
+    border-top: solid 2px #E3E6EC;
+    border-bottom: solid 13px #6e6e6e;
     font-size: 0.8em;
-    font-weight: 300;
+    font-weight: 400;
     padding: 30px;
     padding-left: 0px;
     transition: 0.2s;
-    text-align: left;
-    color: #a1a1a1;
+    text-align: center;
+    color: #6e6e6e;
 }
 
 .footersocialbox {
@@ -179,6 +181,10 @@ h4.introduction {
     align-content: center;
 }
 
+.footersocialbox > a:hover {
+color:var(--obilo-blue);
+}
+
 .sendmessagebutton {
     display: block;
     color: white;
@@ -187,6 +193,7 @@ h4.introduction {
     border-radius: 7px;
     background-color: var(--obilo-blue);
     margin-top: 10px;
+    font-size:1em;
 }
 
 .sendmessagebutton:hover {
@@ -196,7 +203,9 @@ h4.introduction {
 .socialboxcontainer {
     display: flex;
     flex-direction: row;
-    max-width: 600px;
+    margin:0 auto;
+    justify-content: center;
+
 }
 
 .outermostcontainer {
